--- a/vignettes/time_varying_effects.Rmd
+++ b/vignettes/time_varying_effects.Rmd
@@ -80,13 +80,13 @@ plot_mvgam_series(data = data_train, newdata = data_test, y = 'out')
 ### The `dynamic()` function
 Time-varying coefficients can be fairly easily set up using the `s()` or `gp()` wrapper functions in `mvgam` formulae by fitting a nonlinear effect of `time` and using the covariate of interest as the numeric `by` variable (see `?mgcv::s` or `?brms::gp` for more details). The `dynamic()` formula wrapper offers a way to automate this process, and will eventually allow for a broader variety of time-varying effects (such as random walk or AR processes). Depending on the arguments that are specified to `dynamic`, it will either set up a low-rank GP smooth function using `s()` with `bs = 'gp'` and a fixed value of the length scale parameter $\rho$, or it will set up a Hilbert space approximate GP using the `gp()` function with `c=5/4` so that $\rho$ is estimated (see `?dynamic` for more details). In this first example we will use the `s()` option, and will mis-specify the $\rho$ parameter here as, in practice, it is never known. This call to `dynamic()` will set up the following smooth: `s(time, by = temp, bs = "gp", m = c(-2, 8, 2), k = 20)`
 ```{r, include=FALSE}
-mod <- mvgam(out ~ dynamic(temp, rho = 8, stationary = TRUE, k = 20),
+mod <- mvgam(out ~ dynamic(temp, rho = 8, stationary = TRUE, k = 40),
              family = gaussian(),
              data = data_train)
 ```
 
 ```{r, eval=FALSE}
-mod <- mvgam(out ~ dynamic(temp, rho = 8, stationary = TRUE, k = 20),
+mod <- mvgam(out ~ dynamic(temp, rho = 8, stationary = TRUE, k = 40),
              family = gaussian(),
              data = data_train)
 ```
@@ -123,15 +123,15 @@ This results in sensible forecasts of the observations as well
 plot(mod, type = 'forecast', newdata = data_test)
 ```
 
-The syntax is very similar if we wish to estimate the parameters of the underlying Gaussian Process, this time using a Hilbert space approximation. We simply omit the `rho` argument in `dynamic` to make this happen. This will set up a call similar to `gp(time, by = 'temp', c = 5/4), k = 20`.
+The syntax is very similar if we wish to estimate the parameters of the underlying Gaussian Process, this time using a Hilbert space approximation. We simply omit the `rho` argument in `dynamic` to make this happen. This will set up a call similar to `gp(time, by = 'temp', c = 5/4), k = 20)`.
 ```{r include=FALSE}
-mod <- mvgam(out ~ dynamic(temp, k = 20),
+mod <- mvgam(out ~ dynamic(temp, k = 40),
              family = gaussian(),
              data = data_train)
 ```
 
 ```{r eval=FALSE}
-mod <- mvgam(out ~ dynamic(temp, k = 20),
+mod <- mvgam(out ~ dynamic(temp, k = 40),
              family = gaussian(),
              data = data_train)
 ```
@@ -141,7 +141,15 @@ This model summary now contains estimates for the marginal deviation and length 
 summary(mod, include_betas = FALSE)
 ```
 
-The `plot_predictions` call shows that the effect in this case is similar to what we estimated above:
+Effects for `gp()` terms can also be plotted as smooths:
+```{r}
+plot_mvgam_smooth(mod, smooth = 1, newdata = data)
+abline(v = 190, lty = 'dashed', lwd = 2)
+lines(beta_temp, lwd = 2.5, col = 'white')
+lines(beta_temp, lwd = 2)
+```
+
+Both the above plot and the below `plot_predictions()` call show that the effect in this case is similar to what we estimated in the approximate GP smooth model above:
 ```{r}
 plot_predictions(mod, 
                  newdata = datagrid(time = unique,
@@ -221,18 +229,18 @@ plot(mod0, type = 'forecast')
 
 
 ### Including time-varying upwelling effects
-Now we can increase the complexity of our model by constructing and fitting a State-Space model with a time-varying effect of the coastal upwelling index in addition to the autoregressive dynamics. We again use a Beta observation model to capture the restrictions of our proportional observations, but this time will include a `dynamic()` effect of `CUI.apr` in the latent process model. We do not specify the $\rho$ parameter, instead opting to estimate it using a Hilbert space approximate GP. Note also that we no longer need an intercept in the observation model as this may be hard to identify well alongside the flexible process model. `mvgam` allows us to fix the coefficient for the intercept at 0 by specifying a `-1` in the observation formula:
+Now we can increase the complexity of our model by constructing and fitting a State-Space model with a time-varying effect of the coastal upwelling index in addition to the autoregressive dynamics. We again use a Beta observation model to capture the restrictions of our proportional observations, but this time will include a `dynamic()` effect of `CUI.apr` in the latent process model. We do not specify the $\rho$ parameter, instead opting to estimate it using a Hilbert space approximate GP:
 ```{r include=FALSE}
-mod1 <- mvgam(formula = survival ~ -1,
-              trend_formula = ~ dynamic(CUI.apr, k = 20),
+mod1 <- mvgam(formula = survival ~ 1,
+              trend_formula = ~ dynamic(CUI.apr, k = 25),
               trend_model = 'RW',
               family = betar(),
               data = model_data)
 ```
 
 ```{r eval=FALSE}
-mod1 <- mvgam(formula = survival ~ -1,
-              trend_formula = ~ dynamic(CUI.apr, k = 20),
+mod1 <- mvgam(formula = survival ~ 1,
+              trend_formula = ~ dynamic(CUI.apr, k = 25),
               trend_model = 'RW',
               family = betar(),
               data = model_data)
@@ -264,12 +272,16 @@ ggplot(sigmas, aes(y = `sigma[1]`, fill = model)) +
   coord_flip()
 ```
 
-Why does the process error not need to be as flexible in the second model? Because the estimates of this dynamic process are now informed partly by the time-varying effect of upwelling, which we can visualise using `plot_predictions`:
+Why does the process error not need to be as flexible in the second model? Because the estimates of this dynamic process are now informed partly by the time-varying effect of upwelling, which we can visualise on the link scale using `plot()` with `trend_effects = TRUE`:
+```{r}
+plot(mod1, type = 'smooth', trend_effects = TRUE)
+```
+
+Or on the outcome scale, at a range of possible `CUI.apr` values, using `plot_predictions()`:
 ```{r}
 plot_predictions(mod1, newdata = datagrid(CUI.apr = fivenum,
                                           time = unique),
                  by = c('time', 'CUI.apr', 'CUI.apr'),
-                 type = 'link',
                  process_error = FALSE)
 ```
 
