--- a/vignettes/shared_states.Rmd
+++ b/vignettes/shared_states.Rmd
@@ -205,67 +205,72 @@ And now plot the observed relationships between the three sensors and the `tempe
 Now we can formulate and fit a model that allows each sensor's observation error to depend nonlinearly on `temperature` while allowing the true signal to depend nonlinearly on `productivity`. By fixing all of the values in the `trend` column to `1` in the `trend_map`, we are assuming that all observation sensors are tracking the same latent signal. We use informative priors on the two variance components (process error and observation error), which reflect our prior belief that the observation error is smaller overall than the true process error
 ```{r sensor_mod, include = FALSE, results='hide'}
 mod <- mvgam(formula =
-              # formula for observations, allowing for different
-              # intercepts and smooth effects of temperature
-              observed ~ series + s(temperature, by = series, k = 8),
-
+               # formula for observations, allowing for different
+               # intercepts and smooth effects of temperature
+               observed ~ series + 
+               s(temperature, k = 10) +
+               s(series, temperature, bs = 'sz', k = 8),
+             
              trend_formula =
-             # formula for the latent signal, which can depend
-             # nonlinearly on productivity
-             ~ s(productivity, k = 10),
-
+               # formula for the latent signal, which can depend
+               # nonlinearly on productivity
+               ~ s(productivity, k = 8),
+             
              trend_model =
-             # in addition to productivity effects, the signal is
-             # assumed to exhibit temporal autocorrelation
-             'AR1',
-
+               # in addition to productivity effects, the signal is
+               # assumed to exhibit temporal autocorrelation
+               'AR1',
+             
              trend_map =
-             # trend_map forces all sensors to track the same
-             # latent signal
-             data.frame(series = unique(model_dat$series),
-                        trend = c(1, 1, 1)),
-
-            # informative priors on process error
-            # and observation error will help with convergence
-            priors = c(prior(normal(2, 1), class = sigma),
-                       prior(normal(1, 0.5), class = sigma_obs)),
-
-            # Gaussian observations
-            family = gaussian(),
-            burnin = 600,
-            data = model_dat)
+               # trend_map forces all sensors to track the same
+               # latent signal
+               data.frame(series = unique(model_dat$series),
+                          trend = c(1, 1, 1)),
+             
+             # informative priors on process error
+             # and observation error will help with convergence
+             priors = c(prior(normal(2, 0.5), class = sigma),
+                        prior(normal(1, 0.5), class = sigma_obs)),
+             
+             # Gaussian observations
+             family = gaussian(),
+             burnin = 600,
+             adapt_delta = 0.95,
+             data = model_dat)
 ```
 
 ```{r eval=FALSE}
 mod <- mvgam(formula =
-              # formula for observations, allowing for different
-              # intercepts and smooth effects of temperature
-              observed ~ series + s(temperature, by = series, k = 8),
-
+               # formula for observations, allowing for different
+               # intercepts and hierarchical smooth effects of temperature
+               observed ~ series + 
+               s(temperature, k = 10) +
+               s(series, temperature, bs = 'sz', k = 8),
+             
              trend_formula =
-             # formula for the latent signal, which can depend
-             # nonlinearly on productivity
-             ~ s(productivity, k = 10),
-
+               # formula for the latent signal, which can depend
+               # nonlinearly on productivity
+               ~ s(productivity, k = 8),
+             
              trend_model =
-             # in addition to productivity effects, the signal is
-             # assumed to exhibit temporal autocorrelation
-             'AR1',
-
+               # in addition to productivity effects, the signal is
+               # assumed to exhibit temporal autocorrelation
+               'AR1',
+             
              trend_map =
-             # trend_map forces all sensors to track the same
-             # latent signal
-             data.frame(series = unique(model_dat$series),
-                        trend = c(1, 1, 1)),
-
-            # informative priors on process error
-            # and observation error will help with convergence
-            priors = c(prior(normal(2, 1), class = sigma),
-                       prior(normal(1, 0.5), class = sigma_obs)),
-
-            # Gaussian observations
-            family = gaussian(),
-            data = model_dat)
+               # trend_map forces all sensors to track the same
+               # latent signal
+               data.frame(series = unique(model_dat$series),
+                          trend = c(1, 1, 1)),
+             
+             # informative priors on process error
+             # and observation error will help with convergence
+             priors = c(prior(normal(2, 0.5), class = sigma),
+                        prior(normal(1, 0.5), class = sigma_obs)),
+             
+             # Gaussian observations
+             family = gaussian(),
+             data = model_dat)
 ```
 
 View a reduced version of the model summary because there will be many spline coefficients in this model
