--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ knitr::opts_chunk$set(
 The goal of `mvgam` is to use a Bayesian framework to estimate parameters of Generalized Additive Models (DGAMs) for time series with dynamic trend components. The motivation for the package and some of its primary objectives are described in detail by [Clark & Wells 2022](https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.13974){target="_blank"} (published in *Methods in Ecology and Evolution*), with additional inspiration on the use of Bayesian probabilistic modelling to quantify uncertainty and advise principled decision making coming from [Michael Betancourt](https://betanalpha.github.io/writing/){target="_blank"}, [Michael Dietze](https://www.bu.edu/earth/profiles/michael-dietze/){target="_blank"} and [Emily Fox](https://emilybfox.su.domains/){target="_blank"}, among many others. 
 
 ## Resources
-A number of case studies have been compiled to highlight how DGAMs can be estimated using MCMC sampling. These are hosted currently on `RPubs` at the following links:
+In addition to a series of [vignettes covering data formatting, forecasting and several extended case studies](https://nicholasjclark.github.io/mvgam/){target="_blank"}, a number of other examples have been compiled to highlight how DGAMs can be estimated using MCMC sampling. These are hosted currently on `RPubs` at the following links:
   
 * [mvgam case study 1: model comparison and data assimilation](https://rpubs.com/NickClark47/mvgam){target="_blank"}
 * [mvgam case study 2: multivariate models](https://rpubs.com/NickClark47/mvgam2){target="_blank"}
@@ -323,35 +323,7 @@ plot(lynx_mvgam, type = 'residuals')
 ```
 
 ## Comparing models based on forecasts
-Another useful utility of `mvgam` is the ability to use approximate rolling window forecasts to evaluate competing models that may represent different hypotheses about the series dynamics. Here we will fit a poorly specified model to showcase how these evaluations works. In this model, we ignore the cyclic pattern of seasonality. We also use a random walk process for the trend
-```{r, include=FALSE}
-lynx_mvgam_poor <- mvgam(data = lynx_train,
-               newdata = lynx_test,
-               formula = population ~ 1,
-               family = 'poisson',
-               trend_model = 'RW',
-               use_stan = TRUE,
-               chains = 4)
-```
-
-```{r, eval=FALSE}
-lynx_mvgam_poor <- mvgam(data = lynx_train,
-               newdata = lynx_test,
-               formula = population ~ 1,
-               family = 'poisson',
-               trend_model = 'RW',
-               use_stan = TRUE,
-               chains = 4)
-```
-
-The first approximator targets each model's ability to simulate temporal dynamics using the single model that has been fit. We choose a set of timepoints within the training data to forecast from, allowing us to simulate a situation where the model's parameters had already been estimated but we have only observed data up to the evaluation timepoint and would like to generate forecasts from the latent trends. Here we simulate scenarios where we forecast ahead for the next 10 years. The `compare_mvgams` function automates this process by rolling along a set of timepoints for each model, ensuring a more in-depth evaluation of each competing model at the same set of timepoints. 
-```{r}
-compare_mvgams(lynx_mvgam, lynx_mvgam_poor, fc_horizon = 10)
-```
-
-Summary statistics of the two models' out of sample Discrete Rank Probability Score (DRPS) indicate that the well-specified model performs markedly better (lower DRPS) across most out of sample horizons.
-
-The second approximator uses more conventional leave-future-out comparisons. Time series models are often evaluated using an expanding window training technique, where the model is initially trained on some subset of data from `t = 1` to `t = n_train`, and then is used to produce forecasts for the next `fc_horizon` time steps `t = n_train + fc_horizon`. In the next iteration, the size of training data is expanded by a single time point and the process repeated. This is obviously computationally challenging for Bayesian time series models, as the number of refits can be very large. `mvgam` uses an approximation based on importance sampling. Briefly, we refit the model using the first `min_t` observations to perform a single exact `fc_horizon`-ahead forecast step. This forecast is evaluated against the `min_t + fc_horizon` out of sample observations using the Expected Log Predictive Density (ELPD). Next, we approximate each successive round of expanding window forecasts by moving forward one step at a time `for i in 1:N_evaluations` and re-weighting draws from the model's posterior predictive distribution using Pareto Smoothed Importance Sampling (PSIS). In each iteration `i`, PSIS weights are obtained for all observations that would have been included in the model if we had re-fit. If these importance ratios are stable, we consider the approximation adequate and use the re-weighted posterior's forecast for evaluating the next holdout set of testing observations (`(min_t + i + 1):(min_t + i + fc_horizon)`). This is similar to the process of particle filtering to update forecasts in light of new data by re-weighting the posterior draws using importance weights. But at some point the importance ratio variability will become too large and importance sampling will be unreliable. This is indicated by the estimated shape parameter `k` of the generalized Pareto distribution crossing a certain threshold `pareto_k_threshold`. Only then do we refit the model using all of the observations up to the time of the failure. We then restart the process and iterate forward until the next refit is triggered. The process is computationally much more efficient, as only a fraction of the evaluations typically requires refits (the algorithm isdescribed in detail by Bürkner et al. 2020).
+Another useful utility of `mvgam` is the ability to use leave-future-out comparisons. Time series models are often evaluated using an expanding window training technique, where the model is initially trained on some subset of data from `t = 1` to `t = n_train`, and then is used to produce forecasts for the next `fc_horizon` time steps `t = n_train + fc_horizon`. In the next iteration, the size of training data is expanded by a single time point and the process repeated. This is obviously computationally challenging for Bayesian time series models, as the number of refits can be very large. `mvgam` uses an approximation based on importance sampling. Briefly, we refit the model using the first `min_t` observations to perform a single exact `fc_horizon`-ahead forecast step. This forecast is evaluated against the `min_t + fc_horizon` out of sample observations using the Expected Log Predictive Density (ELPD). Next, we approximate each successive round of expanding window forecasts by moving forward one step at a time `for i in 1:N_evaluations` and re-weighting draws from the model's posterior predictive distribution using Pareto Smoothed Importance Sampling (PSIS). In each iteration `i`, PSIS weights are obtained for all observations that would have been included in the model if we had re-fit. If these importance ratios are stable, we consider the approximation adequate and use the re-weighted posterior's forecast for evaluating the next holdout set of testing observations (`(min_t + i + 1):(min_t + i + fc_horizon)`). This is similar to the process of particle filtering to update forecasts in light of new data by re-weighting the posterior draws using importance weights. But at some point the importance ratio variability will become too large and importance sampling will be unreliable. This is indicated by the estimated shape parameter `k` of the generalized Pareto distribution crossing a certain threshold `pareto_k_threshold`. Only then do we refit the model using all of the observations up to the time of the failure. We then restart the process and iterate forward until the next refit is triggered. The process is computationally much more efficient, as only a fraction of the evaluations typically requires refits (the algorithm isdescribed in detail by Bürkner et al. 2020).
 
 Paul-Christian Bürkner, Jonah Gabry & Aki Vehtari (2020). Approximate leave-future-out cross-validation for Bayesian time series models. Journal of Statistical Computation and Simulation. 90:14, 2499-2523.
 
@@ -422,7 +394,7 @@ As before, these metrics all favour the more complex model over the simpler "poo
 * `student_t()` for heavy-tailed real-valued data
 * `lognormal()` for non-negative real-valued data
 * `Gamma()` for non-negative real-valued data
-* `betar()` for proportional data on `(0,1)`
+* `betar()` for proportional data on `[0,1]`
 * `poisson()` for count data
 * `nb()` for overdispersed count data
 * `tweedie()` for overdispersed count data
@@ -479,7 +451,7 @@ for(i in 1:3){
 }
 ```
 
-There are many more extended uses for `mvgam` models, including the ability to fit dynamic coefficient models, dynamic factor and vector autoregressive processes for analysing and forecasting sets of multivariate time series and fitting hierarchical GAMs. See the package documentation for more details.
+There are many more extended uses for `mvgam` models, including the ability to fit hierarchical GAMs that inlude dynamic coefficient models, dynamic factor and Vector Autoregressive processes. See the [package documentation](https://nicholasjclark.github.io/mvgam/){target="_blank"} for more details.
 
 ## License
 This project is licensed under an `MIT` open source license
