--- a/index.Rmd
+++ b/index.Rmd
@@ -66,6 +66,9 @@ for(i in 1:3){
 
 Various `S3` functions can be used to inspect parameter estimates, plot smooth functions and residuals, and evaluate models through posterior predictive checks or forecast comparisons. Please see the package documentation for more detailed examples.
 
+## Usage
+[![`mvgam` usage cheatsheet](https://github.com/nicholasjclark/mvgam/blob/main/misc/mvgam_cheatsheet.png)](https://github.com/nicholasjclark/mvgam/blob/main/misc/mvgam_cheatsheet.pdf)
+
 ## Vignettes
 You can set `build_vignettes = TRUE` when installing with either `devtools::install_github` or `remotes::install_github`, but be aware this will slow down the installation drastically. Instead, you can always access the vignette htmls online at [https://nicholasjclark.github.io/mvgam/articles/](https://nicholasjclark.github.io/mvgam/articles/)
 
